--- a/BlueGreenDeploymentDemo/Views/Home/Index.cshtml
+++ b/BlueGreenDeploymentDemo/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>Hello, I am Blue. How are you ?</h1>
+    <h1>Hello, I am now Green!. How are you doing ?</h1>
    </div>
 
 
