--- a/BlueGreenDeploymentDemo/Views/Home/Index.cshtml
+++ b/BlueGreenDeploymentDemo/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>Hello, I am now Greeb! How are you ?</h1>
+    <h1>Hello, I am Blue back ! How are you ?</h1>
    </div>
 
 
